attempt to fix fab and toolbar but it seems like it breaks the sidenav

--- a/src/app/components/app/app.component.css
+++ b/src/app/components/app/app.component.css
@@ -15,14 +15,17 @@ md-sidenav-layout {
 }
 
 /* does not work*/
-.remove-header {
+.header {
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
-  z-index: 1;
+  z-index: 0;
 }
 
+/*md-nav-list {
+  z-index: 3;
+}*/
 /*
 .example-sidenav-content {
   display: flex;
