--- a/src/styles.css
+++ b/src/styles.css
@@ -15,3 +15,6 @@ html, body {
   width: 100%;
   height: 100%;
 }
+.fill-remaining-space {
+  flex: 1 1 auto;
+}
